--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "test": "karma start"
   },
   "dependencies": {
+    "@polymer/iron-icons": "^3.0.1",
+    "@polymer/paper-icon-button": "^3.0.2",
+    "@polymer/paper-item": "^3.0.1",
+    "@polymer/paper-listbox": "^3.0.1",
+    "@polymer/paper-menu-button": "^3.0.1",
     "@polymer/paper-toast": "^3.0.1",
     "lit-element": "^2.0.0"
   },
